Implement features p6-2 - Format code

--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -1,50 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-                name="shareViewModelShoesList"
-                type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
+            name="shareViewModelShoesList"
+            type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="?attr/actionBarSize"
-            tools:context=".features.shoeslist.ShoesListFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        tools:context=".features.shoeslist.ShoesListFragment">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabAddShoe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_30dp"
-                android:clickable="true"
-                android:backgroundTint="@color/colorAccent"
-                android:contentDescription="@null"
-                android:focusable="true"
-                android:src="@drawable/ic_add"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+            android:id="@+id/fabAddShoe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dimen_30dp"
+            android:backgroundTint="@color/colorAccent"
+            android:clickable="true"
+            android:contentDescription="@null"
+            android:focusable="true"
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.core.widget.NestedScrollView
-                android:id="@+id/shoesListScrollView"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_0dp"
-                android:fillViewport="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+            android:id="@+id/shoesListScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                    android:id="@+id/lnShoeItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/dimen_80dp"
-                    android:orientation="vertical" />
+                android:id="@+id/lnShoeItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_80dp"
+                android:orientation="vertical" />
 
         </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
