--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,103 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-                name="registerViewModel"
-                type="com.udacity.shoestore.features.register.RegisterViewModel" />
+            name="registerViewModel"
+            type="com.udacity.shoestore.features.register.RegisterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginTop="@dimen/dimen_40dp"
-            android:paddingHorizontal="@dimen/dimen_40dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".features.register.RegisterFragment">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dimen_40dp"
+        android:paddingHorizontal="@dimen/dimen_40dp"
+        tools:context=".features.register.RegisterFragment">
 
         <ImageView
-                android:layout_marginTop="@dimen/dimen_40dp"
-                android:id="@+id/imgSignUp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@null"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/imgSignUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_40dp"
+            android:contentDescription="@null"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:id="@+id/textRegister"
-                style="@style/TitleTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="@string/register"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imgSignUp" />
+            android:id="@+id/textRegister"
+            style="@style/TitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/register"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgSignUp" />
 
         <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutEmail"
-                style="@style/InputTextCommon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                app:layout_constraintTop_toBottomOf="@id/textRegister">
+            android:id="@+id/layoutEmail"
+            style="@style/InputTextCommon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            app:layout_constraintTop_toBottomOf="@id/textRegister">
 
             <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputEmailRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress" />
+                android:id="@+id/inputEmailRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layoutPassword"
-                style="@style/InputTextCommon"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                app:layout_constraintTop_toBottomOf="@id/layoutEmail">
+            android:id="@+id/layoutPassword"
+            style="@style/InputTextCommon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            app:layout_constraintTop_toBottomOf="@id/layoutEmail">
 
             <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/inputPasswordRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword" />
+                android:id="@+id/inputPasswordRegister"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnRegister"
-                style="@style/ButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                android:text="@string/register"
-                android:onClick="@{() -> registerViewModel.startWelcomeScreen()}"
-                app:layout_constraintTop_toBottomOf="@id/layoutPassword" />
+            android:id="@+id/btnRegister"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:onClick="@{() -> registerViewModel.startWelcomeScreen()}"
+            android:text="@string/register"
+            app:layout_constraintTop_toBottomOf="@id/layoutPassword" />
 
         <TextView
-                android:id="@+id/textSuggestLogin"
-                style="@style/ClickableTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="@string/suggest_login"
-                app:layout_constraintTop_toBottomOf="@id/btnRegister" />
+            android:id="@+id/textSuggestLogin"
+            style="@style/ClickableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:text="@string/suggest_login"
+            app:layout_constraintTop_toBottomOf="@id/btnRegister" />
 
         <TextView
-                android:id="@+id/textForgetPass"
-                style="@style/ClickableTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_8dp"
-                android:text="@string/forget_password"
-                app:layout_constraintTop_toBottomOf="@id/textSuggestLogin" />
+            android:id="@+id/textForgetPass"
+            style="@style/ClickableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_8dp"
+            android:text="@string/forget_password"
+            app:layout_constraintTop_toBottomOf="@id/textSuggestLogin" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
