--- a/app/src/main/res/layout/fragment_add_shoe.xml
+++ b/app/src/main/res/layout/fragment_add_shoe.xml
@@ -67,14 +67,18 @@
             android:text="@={shoe.description}"
             app:layout_constraintTop_toBottomOf="@id/inputNameShoe" />
 
+        <!--android:value="@={shoe.size}"
+            android:value="@={' ' + shoe.size}"
+            android:text='@{String.format("%.1f", shoe.size)}'
+        -->
         <EditText
             android:id="@+id/inputSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_16dp"
             android:hint="@string/size"
-            android:inputType="numberDecimal"
-            android:text="@={shoe.size}"
+            android:inputType="numberDecimal|number"
+
             app:layout_constraintTop_toBottomOf="@id/inputDescription" />
 
         <EditText
