--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="welcomeViewModel"
-            type="com.udacity.shoestore.features.welcome.WelcomeViewmodel" />
+            type="com.udacity.shoestore.features.welcome.WelcomeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
