--- a/app/src/main/res/layout/fragment_add_shoe.xml
+++ b/app/src/main/res/layout/fragment_add_shoe.xml
@@ -78,7 +78,7 @@
             android:layout_marginTop="@dimen/dimen_16dp"
             android:hint="@string/size"
             android:inputType="numberDecimal|number"
-
+            android:text="@={`` + shoe.size}"
             app:layout_constraintTop_toBottomOf="@id/inputDescription" />
 
         <EditText
