--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -41,7 +41,7 @@
 
         <TextView
             android:id="@+id/textWelcomeContent"
-            style="@style/NormalTextView"
+            style="@style/TitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_80dp"
