--- a/app/src/main/res/layout/fragment_shoes_list.xml
+++ b/app/src/main/res/layout/fragment_shoes_list.xml
@@ -10,6 +10,9 @@
             type="com.udacity.shoestore.shareviewmodel.ShareViewModel" />
     </data>
 
+    <!--
+        I chose Constraintlayout is parent because it is easy to build the screen with at least nested
+    -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
