--- a/app/src/main/res/layout/layout_item_shoe.xml
+++ b/app/src/main/res/layout/layout_item_shoe.xml
@@ -10,6 +10,9 @@
             type="com.udacity.shoestore.models.Shoe" />
     </data>
 
+    <!--
+        I chose Constraintlayout is parent because it is easy to build the screen with at least nested
+    -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +42,6 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Kameyoko shoe" />
 
-        <!--android:text="@{shoeItemData.size}"-->
         <TextView
             android:id="@+id/sizeShoe"
             style="@style/TitleItemTextView"
